# AdventOfCode2023

./: CMakeLists.txt  ideas.md  readme.md
src/day01/: main.cpp  main.hpp
src/day02/: game.cpp  game.hpp  main.cpp  main.hpp  set.cpp  set.hpp
src/day03/: engine_schematic.cpp  engine_schematic.hpp  main.cpp
src/day04/: card.cpp  card.hpp  main.cpp  scratchcard.cpp  scratchcard.hpp  scratchcard_pile.cpp  scratchcard_pile.hpp
src/day05/: almanac.cpp  almanac.hpp  main.cpp  map.cpp  map.hpp
src/day06/: main.cpp  race.cpp  race.hpp
src/day07/: hand.cpp  hand.hpp  main.cpp  pocketbet.cpp  pocketbet.hpp
src/day08/: main.cpp  map.cpp  map.hpp  node.cpp  node.hpp  numeric.hpp
src/day09/: main.cpp  report.cpp  report.hpp
src/day10/: main.cpp  matrix.cpp  matrix.hpp  piping.cpp  piping.hpp
src/day11/: image.cpp  image.hpp  main.cpp  position.hpp
src/day12/: condition_record.cpp  condition_record.hpp  main.cpp
src/day13/: main.cpp  pattern.cpp  pattern.hpp  test3
src/day14/: main.cpp  platform.cpp  platform.hpp
src/day15/: box.cpp  box.hpp  init_sequence.cpp  init_sequence.hpp  main.cpp
src/day16/: cell.cpp  cell.hpp  contraption.cpp  contraption.hpp  main.cpp
src/day17/: main.cpp  map.cpp  map.hpp  state.cpp  state.hpp
src/day18/: instruction.cpp  instruction.hpp  main.cpp
src/day19/: main.cpp  part.cpp  part.hpp  part_sorter.cpp  part_sorter.hpp  workflow.cpp  workflow.hpp
src/day20/: broadcaster.cpp  broadcaster.hpp  component.cpp  component.hpp  conjuction.cpp  conjuction.hpp  dummy_component.cpp  dummy_component.hpp  flip_flop.cpp  flip_flop.hpp  main.cpp  network.cpp  network.hpp  test3
src/day21/: main.cpp  map.cpp  map.hpp
src/dayxx/: main.cpp
